--- a/index.html
+++ b/index.html
@@ -1,33 +1,160 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="UTF-8">
+    <title>VORSA Volunteer Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Favicon -->
+ <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Vanilla Datepicker CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/css/datepicker.min.css" rel="stylesheet">
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="style.css">
 
-    <!-- Bootstrap CSS v5.2.1 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
 </head>
 
 <body>
-    <header>
-        <!-- place navbar here -->
-    </header>
-    <main></main>
-    <footer>
-        <!-- place footer here -->
-    </footer>
-    <!-- Bootstrap JavaScript Libraries -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-        integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-        crossorigin="anonymous"></script>
+    <div class="container py-5">
+        <div class="form-container">
+
+            <img src="images/form_banner.jpg" loading="lazy" alt="VORSA Header" class="header-image">
+
+            <h3 class="text-center mb-4 heading_form_name"><strong>Volunteer Registration Form</strong></h3>
+
+            <form class="volunteer_form">
+
+                <!-- Name -->
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name:</label>
+                    <input type="text" class="form-control" placeholder="Enter your name" id="name" name="name"
+                        required>
+                </div>
+
+                <!-- DOB -->
+                <div class="mb-3">
+                    <label for="dob" class="form-label">Date of Birth:</label>
+                    <input type="text" class="form-control" id="dob" name="dob" placeholder="DD-MM-YYYY" required>
+                </div>
+
+                <!-- Mobile -->
+                <div class="mb-3">
+                    <label for="mob" class="form-label">Mobile Number:</label>
+                    <input type="tel" class="form-control" placeholder="Enter your phone number" id="mob" name="mob"
+                        pattern="[0-9]{10}" maxlength="10" required>
+                </div>
+
+                <!-- Email -->
+                <div class="mb-3">
+                    <label for="mail" class="form-label">Email:</label>
+                    <input type="email" class="form-control" placeholder="Enter your email address" id="mail"
+                        name="mail" required>
+                </div>
+
+                <div class="row">
+                    <!-- State Dropdown -->
+                    <div class="col-md-6 mb-3">
+                        <label for="state" class="form-label">State:</label>
+                        <select id="state" class="form-select" onchange="loadDistricts()" required>
+                            <option value="" disabled selected>Select your state</option>
+                        </select>
+                    </div>
+
+                    <!-- District Dropdown -->
+                    <div class="col-md-6 mb-3">
+                        <label for="district" class="form-label">District:</label>
+                        <select id="district" class="form-select" required>
+                            <option value="" disabled selected>Select your district</option>
+                        </select>
+                    </div>
+                </div>
+
+                <!-- Address Fields -->
+                <div class="row">
+                    <div class="col-md-6 mb-3">
+                        <label for="village" class="form-label">Village name:</label>
+                        <input type="text" class="form-control" placeholder="Enter your village name" id="village"
+                            name="village" required>
+                    </div>
+                    <div class="col-md-6 mb-3">
+                        <label for="block" class="form-label">Block no:</label>
+                        <input type="text" class="form-control" placeholder="Enter your block no" id="block"
+                            name="block" required>
+                    </div>
+                </div>
+
+                <div class="mb-3">
+                    <label for="pin" class="form-label">Pin Code:</label>
+                    <input type="text" class="form-control" placeholder="Enter your pin code ex: 713202" id="pin"
+                        name="pin" pattern="[0-9]{6}" maxlength="6" required>
+                </div>
+
+                <!-- Blood Group -->
+                <div class="mb-3">
+                    <label for="blood" class="form-label">Blood Group:</label>
+                    <select class="form-select" id="blood" name="blood" required>
+                        <option value="" selected disabled>Select Blood Group</option>
+                        <option value="A+">A+</option>
+                        <option value="A-">A−</option>
+                        <option value="B+">B+</option>
+                        <option value="B-">B−</option>
+                        <option value="O+">O+</option>
+                        <option value="O-">O−</option>
+                        <option value="AB+">AB+</option>
+                        <option value="AB-">AB−</option>
+                    </select>
+                </div>
+
+                <!-- Checkbox -->
+                <div class="form-check mb-3 text-center d-flex justify-content-center">
+                    <input class="form-check-input custom-checkbox" type="checkbox" id="volunteer" name="volunteer"
+                        required>
+                    <label class="form-check-label" for="volunteer">
+                        &nbsp;I want to work with vorsha foundation as a volunteer.
+                    </label>
+                </div>
+
+                <div style="text-align: center;">
+                    <div style="display: inline-block; transform: scale(0.85);">
+                        <!-- reCAPTCHA -->
+                        <div class="g-recaptcha mb-3" data-sitekey="YOUR_SITE_KEY_HERE"></div>
+                    </div>
+                </div>
+
+
+
+                <!-- Submit Button -->
+                <div>
+                    <button type="submit" class="full-width-btn">Submit</button>
+                </div>
+
+            </form>
+            <!-- Verification Popup -->
+            <div id="verify_popup" style="display:none; margin-top:20px;">
+                <label>Enter the 6-digit code sent to your email:</label>
+                <input type="text" id="verification_code" maxlength="6" class="form-control my-2" />
+                <button id="verify_code_btn" class="btn btn-primary">Verify Code</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Captcha code -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- jQuery Validation -->
+    <script src="https://cdn.jsdelivr.net/jquery.validation/1.19.5/jquery.validate.min.js"></script>
+    <!-- Moment.js for date manipulation -->
+    <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
+    <!-- JS Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.3.4/dist/js/datepicker-full.min.js"></script>
+
+    <!-- Custom js -->
+    <script src="script.js"></script>
 </body>
 
 </html>
